--- a/web/example/css/basic.css
+++ b/web/example/css/basic.css
@@ -4,6 +4,34 @@
 	color: #000000;
 }
 
+.standardTable_Header {
+	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #FFFFFF;
+    background-color: #333366;
+}
+
+.standardTable_Footer {
+	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #FFFFFF;
+    background-color: #666699;
+}
+
+.standardTable_Row1 {
+	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #000000;
+    background-color: #9999CC;
+}
+
+.standardTable_Row2 {
+	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #000000;
+    background-color: #CCCCFF;
+}
+
 .standardTable {
     background-color: #CCCC99;
 }
