--- a/web/example/css/basic.css
+++ b/web/example/css/basic.css
@@ -5,33 +5,33 @@
 }
 
 .standardTable_Header {
-	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-size: 12px;
 	color: #FFFFFF;
     background-color: #333366;
+    padding: 3;
+    text-align: center;
+    border: none;
 }
 
 .standardTable_Footer {
-	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-size: 12px;
 	color: #FFFFFF;
     background-color: #666699;
+    padding: 3;
+    border: none;
 }
 
 .standardTable_Row1 {
-	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	color: #000000;
     background-color: #9999CC;
+    border: 1px solid blue;
 }
 
 .standardTable_Row2 {
-	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	color: #000000;
     background-color: #CCCCFF;
+    border: 1px solid blue;
 }
 
 .standardTable {
-    background-color: #CCCC99;
+	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #000000;
+    padding: 2;
 }
