*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165788 13f79535-47bb-0310-9956-ffa450edef68

--- a/web/example/css/basic.css
+++ b/web/example/css/basic.css
@@ -12,6 +12,14 @@
     border: none;
 }
 
+.standardTable_SortHeader {
+	color: #000000;
+    background-color: #CCCCCC;
+    padding: 3;
+    text-align: center;
+    border: 1px solid blue;
+}
+
 .standardTable_Footer {
 	color: #FFFFFF;
     background-color: #666699;
