--- a/web/example/css/basic.css
+++ b/web/example/css/basic.css
@@ -4,42 +4,52 @@
 	color: #000000;
 }
 
+.standardTable {
+	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #000000;
+    padding: 2;
+}
+
 .standardTable_Header {
 	color: #FFFFFF;
     background-color: #333366;
-    padding: 3;
     text-align: center;
     border: none;
 }
 
 .standardTable_SortHeader {
 	color: #000000;
-    background-color: #CCCCCC;
-    padding: 3;
+    background-color: #FFFFF;
     text-align: center;
-    border: 1px solid blue;
 }
 
 .standardTable_Footer {
 	color: #FFFFFF;
     background-color: #666699;
-    padding: 3;
-    border: none;
 }
 
 .standardTable_Row1 {
-    background-color: #9999CC;
-    border: 1px solid blue;
+    background-color: #CCCCFF;
 }
 
 .standardTable_Row2 {
-    background-color: #CCCCFF;
-    border: 1px solid blue;
+    background-color: #9999CC;
 }
 
-.standardTable {
-	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	color: #000000;
-    padding: 2;
+.standardTable_Column {
+}
+
+.standardTable_ColumnCentered {
+    text-align: center
+}
+
+a
+{
+	color: #333366;
+}
+
+a:hover
+{
+	color: #333366;
 }
