--- a/web/example/css/basic.css
+++ b/web/example/css/basic.css
@@ -1,3 +1,7 @@
+.* {
+	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
+}
+
 .standard {
 	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 12px;
@@ -20,7 +24,7 @@
 
 .standardTable_SortHeader {
 	color: #000000;
-    background-color: #FFFFF;
+    background-color: #CCCCCC;
     text-align: center;
 }
 
@@ -47,9 +51,11 @@
 a
 {
 	color: #333366;
+    text-decoration: underline;
 }
 
 a:hover
 {
 	color: #333366;
+    text-decoration: underline;
 }
