*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165816 13f79535-47bb-0310-9956-ffa450edef68

--- a/web/example/css/basic.css
+++ b/web/example/css/basic.css
@@ -26,6 +26,8 @@
 	color: #000000;
     background-color: #CCCCCC;
     text-align: center;
+    font-size: medium;
+    font-weight: bold;
 }
 
 .standardTable_Footer {
@@ -59,3 +61,5 @@ a:hover
 	color: #333366;
     text-decoration: underline;
 }
+
+
