*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165828 13f79535-47bb-0310-9956-ffa450edef68

--- a/web/example/css/basic.css
+++ b/web/example/css/basic.css
@@ -71,3 +71,40 @@ a:hover
     text-decoration: none;
 }
 
+
+.pageLayout {
+    width:760px;
+    height:100%;
+}
+
+.pageHeader {
+    text-align: center;
+    height:1px;
+    overflow:visible;
+    background-color: #CCCCFF;
+}
+
+.navigation {
+    text-align: left;
+    vertical-align: top;
+    width: 200px;
+    background-color: #9999CC;
+    padding: 10px;
+}
+
+.pageBody {
+    text-align: left;
+    vertical-align: top;
+    width: 560px;
+    padding: 20px;
+    background-color: #FFFFFF;
+}
+
+.pageFooter {
+    text-align: right;
+    font-size: xx-small;
+    height:1px;
+    overflow:visible;
+    background-color: #333366;
+    color: #FFFFFF;
+}
