*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165855 13f79535-47bb-0310-9956-ffa450edef68

--- a/web/example/css/basic.css
+++ b/web/example/css/basic.css
@@ -78,7 +78,8 @@ a:hover
 }
 
 .pageHeader {
-    text-align: left;
+    text-align: center;
+    vertical-align: middle;
     height:1px;
     overflow:visible;
     background-color: #CCCCFF;
