*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165974 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/web/css/basic.css
+++ b/webapps/examples/web/css/basic.css
@@ -85,7 +85,7 @@ a:hover
     background-color: #CCCCFF;
 }
 
-.navigation {
+.pageNavigation {
     text-align: left;
     vertical-align: top;
     width: 200px;
@@ -109,6 +109,14 @@ a:hover
     background-color: #333366;
     color: #FFFFFF;
 }
+
+
+
+.navigation {
+	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+}
+
 
 
 .fileUploadInput {
