--- a/webapps/examples/web/css/basic.css
+++ b/webapps/examples/web/css/basic.css
@@ -88,7 +88,7 @@ a:hover
 .pageNavigation {
     text-align: left;
     vertical-align: top;
-    width: 200px;
+    width: 240px;
     background-color: #9999CC;
     padding: 10px;
 }
@@ -117,6 +117,30 @@ a:hover
 	font-size: 12px;
 }
 
+.navigation_column {
+	white-space : nowrap;
+}
+
+a.navigation_link {
+    text-decoration : none;
+}
+
+a.navigation_link:hover,active {
+    text-decoration : none;
+    color: #FFFFFF;
+}
+
+.navitem1 {
+    margin-left : 0px;
+}
+
+.navitem2 {
+    margin-left : 12px;
+}
+
+.navitem3 {
+    margin-left : 24px;
+}
 
 
 .fileUploadInput {
