*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165991 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/web/css/basic.css
+++ b/webapps/examples/web/css/basic.css
@@ -117,8 +117,13 @@ a:hover
 	font-size: 12px;
 }
 
-.navigation_column {
+.navitem {
 	white-space : nowrap;
+}
+
+.navitem_open {
+	white-space : nowrap;
+	font-weight : bold;
 }
 
 a.navigation_link {
@@ -130,15 +135,15 @@ a.navigation_link:hover,active {
     color: #FFFFFF;
 }
 
-.navitem1 {
+.navlevel1 {
     margin-left : 0px;
 }
 
-.navitem2 {
+.navlevel2 {
     margin-left : 12px;
 }
 
-.navitem3 {
+.navlevel3 {
     margin-left : 24px;
 }
 
