*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165993 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/web/css/basic.css
+++ b/webapps/examples/web/css/basic.css
@@ -147,6 +147,12 @@ a.navigation_link:hover,active {
     margin-left : 24px;
 }
 
+.navseparator {
+    border-bottom: 1px solid #000000;
+    width=230px;
+	font-size: 0px;
+    font-color: #9999CC;
+}
 
 .fileUploadInput {
 	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
