--- a/webapps/examples/web/css/basic.css
+++ b/webapps/examples/web/css/basic.css
@@ -8,6 +8,13 @@
 	color: #000000;
 }
 
+.standard_bold {
+	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #000000;
+    font-weight: bold;
+}
+
 .standardTable {
 	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 12px;
