--- a/webapps/examples/web/css/basic.css
+++ b/webapps/examples/web/css/basic.css
@@ -22,16 +22,18 @@
     padding: 2;
     border-style: solid;
     border-width: 1px;
-    width: 300px;
+    width: 400px;
 }
 
-.scrollerTable2 {
+.scroller {
+    padding-left:20px;
+}
+
+.paginator {
 	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	color: #000000;
-    padding: 2;
-    width: 300px;
 }
+
 
 .standardTable {
 	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
