--- a/webapps/examples/web/css/basic.css
+++ b/webapps/examples/web/css/basic.css
@@ -346,3 +346,10 @@ div.titlebar {
 table .selectOneRadio {
     font-weight: bold;
 }
+
+
+.standardList {
+	font-family : verdana, Geneva, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	color: #000000;
+}
