--- a/src/components/org/apache/myfaces/custom/htmlEditor/resource/kupustyles.css
+++ b/src/components/org/apache/myfaces/custom/htmlEditor/resource/kupustyles.css
@@ -16,7 +16,7 @@ div.kupu-fulleditor {
   font-family: Verdana, "Lucida Grande", Helvetica, Arial, sans-serif;
   border: solid 3px ButtonHighlight;
   margin: 0.2em;
-  height: 100%;
+  /* height: 100%; */
 }
 
 div.kupu-fulleditor .kupu-editorframe {
@@ -115,15 +115,18 @@ div.kupu-editorframe {
   margin-left: 0.3em;
   margin-bottom: 0.3em;
   border: solid 2px ButtonFace;
+  height: 100%; /* MyFaces modif. */
 }
 
 #kupu-editor {
-  height: 450px;
+  height: 100%; /* MyFaces modif. */
+  /* height: 450px; */
   width: 99%;
 }
 
 #kupu-editor-textarea {
-  height: 450px;
+  height: 100%; /* MyFaces modif. */
+  /* height: 450px; */
   width: 99%;
 }
 
