--- a/src/components/org/apache/myfaces/custom/htmlEditor/resource/kupustyles.css
+++ b/src/components/org/apache/myfaces/custom/htmlEditor/resource/kupustyles.css
@@ -121,13 +121,13 @@ div.kupu-editorframe {
 #kupu-editor {
   height: 100%; /* MyFaces modif. */
   /* height: 450px; */
-  width: 99%;
+  width: 100%; /* MyFaces modif. */
 }
 
 #kupu-editor-textarea {
   height: 100%; /* MyFaces modif. */
   /* height: 450px; */
-  width: 99%;
+  width: 100%; /* MyFaces modif. */
 }
 
 div.kupu-toolboxes {
