--- a/src/components/org/apache/myfaces/custom/htmlEditor/resource/kupustyles.css
+++ b/src/components/org/apache/myfaces/custom/htmlEditor/resource/kupustyles.css
@@ -12,20 +12,54 @@
 
 /* $Id$ */
 
-div.kupu-fulleditor {
+.kupu-fulleditor, .kupu-toolboxes {
   font-family: Verdana, "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+div.kupu-fulleditor .kupu-fulleditor-zoomed {
   border: solid 3px ButtonHighlight;
   margin: 0.2em;
-  /* height: 100%; */
+  height: 100%;
 }
 
 div.kupu-fulleditor .kupu-editorframe {
   margin-right: 20em;
 }
 
+div.kupu-fulleditor-zoomed {
+   z-index: 1;
+   margin: 0; border: none;
+   position: fixed;
+   top: 0; left: 0;
+}
+
+* html div.kupu-fulleditor-zoomed {
+   position: absolute; /* IE */
+}
+
+div.kupu-fulleditor-zoomed .kupu-editor-iframe {
+  border: none;
+  border-top: solid black 1px;
+  margin: 0;
+}
+
 div.kupu-smalleditor .kupu-editorframe {
   margin-right: 0.2em;
 }
+
+/*
+div.kupu-sourcemode #kupu-editor {
+   display: none;
+}
+
+div.kupu-sourcemode textarea.kupu-editor-textarea {
+   display: block;
+}*/
+
+div.kupu-sourcemode span.kupu-tb-buttongroup,
+div.kupu-sourcemode select { display: none; }
+div.kupu-sourcemode span#kupu-logo,
+div.kupu-sourcemode span#kupu-source { display: inline; }
 
 div.kupu-smalleditor {
   font-family: Verdana, "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -67,40 +101,47 @@ div.kupu-smalleditor {
   margin-right: 2px;
 }
 
-.kupu-bold {background-image: url("kupuimages/bold.gif");}
-.kupu-bold-pressed {background-image: url("kupuimages/bold.gif"); background-color: white;}
-.kupu-forecolor {background-image: url("kupuimages/textcolor.gif");}
-.kupu-hilitecolor {background-image: url("kupuimages/bgcolor.gif");}
-.kupu-hyperlink {background-image: url("kupuimages/hyperlink.gif");}
-.kupu-hyperlink-pressed {background-image: url("kupuimages/hyperlink.gif"); background-color: white}
-.kupu-image {background-image: url("kupuimages/image.gif");}
-.kupu-indent {background-image: url("kupuimages/indent.gif");}
-.kupu-inserthorizontalrule {background-image: url("kupuimages/hr.gif");}
-.kupu-insertorderedlist {background-image: url("kupuimages/numbered.gif");}
-.kupu-insertunorderedlist {background-image: url("kupuimages/list.gif");}
+
+.kupu-bold {background-image: url("kupuimages/bold.png");}
+.kupu-bold-pressed {background-image: url("kupuimages/bold.png"); background-color: white;}
+.kupu-forecolor {background-image: url("kupuimages/text-color.png");}
+.kupu-hilitecolor {background-image: url("kupuimages/background-color.png");}
+
+.kupu-inthyperlink {background-image: url("kupuimages/inthyperlink.png");}
+.kupu-inthyperlink-pressed {background-image: url("kupuimages/inthyperlink.png"); background-color: white}
+.kupu-exthyperlink {background-image: url("kupuimages/exthyperlink.png");}
+.kupu-exthyperlink-pressed {background-image: url("kupuimages/exthyperlink.png"); background-color: white}
+
+.kupu-image {background-image: url("kupuimages/image.png");}
+.kupu-indent {background-image: url("kupuimages/indent.png");}
+.kupu-inserthorizontalrule {background-image: url("kupuimages/hr.png");}
+.kupu-insertorderedlist {background-image: url("kupuimages/ordered-list.png");}
+.kupu-insertunorderedlist {background-image: url("kupuimages/unordered-list.png");}
 .kupu-insertdefinitionlist {background-image: url("kupuimages/definitionlist.png");}
-.kupu-italic {background-image: url("kupuimages/italic.gif");}
-.kupu-italic-pressed {background-image: url("kupuimages/italic.gif"); background-color: white}
-.kupu-justifycenter {background-image: url("kupuimages/centre.gif");}
-.kupu-justifyleft {background-image: url("kupuimages/left_just.gif");}
-.kupu-justifyright {background-image: url("kupuimages/right_just.gif");}
+.kupu-italic {background-image: url("kupuimages/italic.png");}
+.kupu-italic-pressed {background-image: url("kupuimages/italic.png"); background-color: white}
+.kupu-justifycenter {background-image: url("kupuimages/justify-center.png");}
+.kupu-justifyleft {background-image: url("kupuimages/justify-left.png");}
+.kupu-justifyright {background-image: url("kupuimages/justify-right.png");}
 .kupu-logo {background-image: url("kupuimages/kupu_icon.gif");}
-.kupu-outdent {background-image: url("kupuimages/outdent.gif");}
-.kupu-redo {background-image: url("kupuimages/redo.gif");}
-.kupu-save {background-image: url("kupuimages/save.gif");}
+.kupu-outdent {background-image: url("kupuimages/outdent.png");}
+.kupu-redo {background-image: url("kupuimages/redo.png");}
+.kupu-save {background-image: url("kupuimages/save.png");}
 .kupu-save-and-exit {background-image: url("kupuimages/exit.gif");}
 .kupu-space {background-image: url("kupuimages/space.gif");}
-.kupu-source {background-image: url("kupuimages/source.gif");}
-.kupu-subscript {background-image: url("kupuimages/subscript.gif");}
-.kupu-subscript-pressed {background-image: url("kupuimages/subscript.gif"); background-color: white}
-.kupu-superscript {background-image: url("kupuimages/superscript.gif");}
-.kupu-superscript-pressed {background-image: url("kupuimages/superscript.gif"); background-color: white}
-.kupu-table {background-image: url("kupuimages/table.gif");}
-.kupu-underline {background-image: url("kupuimages/underline.gif");}
-.kupu-underline-pressed {background-image: url("kupuimages/underline.gif"); background-color: white}
-.kupu-undo {background-image: url("kupuimages/undo.gif");}
-.kupu-removelink {background-image: url("kupuimages/remove.png")}
-.kupu-removeimage {background-image: url("kupuimages/remove.png")}
+.kupu-source {background-image: url("kupuimages/view-source.png");}
+.kupu-subscript {background-image: url("kupuimages/subscript.png");}
+.kupu-subscript-pressed {background-image: url("kupuimages/subscript.png"); background-color: white}
+.kupu-superscript {background-image: url("kupuimages/superscript.png");}
+.kupu-superscript-pressed {background-image: url("kupuimages/superscript.png"); background-color: white}
+.kupu-table {background-image: url("kupuimages/table.png");}
+.kupu-underline {background-image: url("kupuimages/underline.png");}
+.kupu-underline-pressed {background-image: url("kupuimages/underline.png"); background-color: white}
+.kupu-undo {background-image: url("kupuimages/undo.png");}
+.kupu-removelink {background-image: url("kupuimages/remove.png");}
+.kupu-removeimage {background-image: url("kupuimages/remove.png");}
+.kupu-zoom {background-image: url("kupuimages/zoom-in.gif");}
+.kupu-zoom-pressed {background-image: url("kupuimages/zoom-out.gif");}
 
 #kupu-tb-buttons button.invisible { 
   display: none;
@@ -115,25 +156,22 @@ div.kupu-editorframe {
   margin-left: 0.3em;
   margin-bottom: 0.3em;
   border: solid 2px ButtonFace;
-  height: 100%; /* MyFaces modif. */
 }
 
 #kupu-editor {
-  height: 100%; /* MyFaces modif. */
-  /* height: 450px; */
-  width: 100%; /* MyFaces modif. */
+  height: 450px;
+  width: 99%;
 }
 
-#kupu-editor-textarea {
-  height: 100%; /* MyFaces modif. */
-  /* height: 450px; */
-  width: 100%; /* MyFaces modif. */
+textarea.kupu-editor-textarea {
+  height: 450px;
+  width: 99%;
+  display: none;
 }
 
 div.kupu-toolboxes {
   float: right;	
   border: solid 2px ButtonFace;
-  height: 100%;
   width: 19.4em;
   margin-right: 0.3em;
   margin-bottom: 0.3em;
@@ -153,14 +191,26 @@ div.kupu-toolbox h1, div.kupu-toolbox-active h1 {
 }
 
 div.kupu-toolbox-label, span.kupu-toolbox-searchterm, 
-input.kupu-toolbox-st, button.kupu-toolbox-action, 
+input.wide, select.wide, textarea.wide, button.kupu-toolbox-action, 
 div.kupu-toolbox-results {
   margin-left: 0.2em;
   margin-right: 0.2em;
 }
 
+.wide {
+  width: 95%;
+}
+
 div.kupu-toolbox-label {
   margin-bottom: 0.4em;
+}
+
+.kupu-toolbox-buttons {
+  text-align: center;
+}
+
+.kupu-toolbox-buttons button {
+  width: 45%;
 }
 
 div.kupu-toolbox-results {
@@ -180,11 +230,6 @@ div.kupu-toolbox-active {
   background-color: ButtonFace;
 }
 
-table#kupu-toolbox-addtable {
-
-}
-
-
 div.kupu-toolbox button {
   font-size: 0.9em;
   border: 1px solid;
@@ -195,7 +240,6 @@ div.kupu-toolbox button:active {
   border: 1px solid;
   border-color: ButtonShadow ButtonHighlight ButtonHighlight ButtonShadow;
 }
-
 
 #kupu-toolbox-editlink, #kupu-toolbox-edittable,
 #kupu-ulstyles, #kupu-olstyles {
@@ -212,19 +256,11 @@ div#kupu-colorchooser {
   font-size: small;
 }
 
-div#kupu-fgcolorchooser div:hover {
-  /* border: outset 1px; */
-}
-
-#kupu-toolbox-properties input {
-  width: 16em;
-}
-
-textarea#kupu-properties-description {
-  width: 22em;
-}
-
-textarea, input {
+.kupu-toolboxes input, .kupu-toolboxes select, .kupu-toolboxes textarea {
   font-size: x-small;
   font-family: Verdana, "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+div#kupu-fgcolorchooser div:hover {
+  /* border: outset 1px; */
 }
