Sean Schofield's tree2 initial commit, with extensions filter enhancements.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167601 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/web/css/basic.css
+++ b/webapps/examples/web/css/basic.css
@@ -358,6 +358,28 @@ div.titlebar {
    ------------------------------------------------------------
 */
 
+.nodeFolder
+{
+    font-size: 10px;
+    font-family: Verdana, Geneva, sans-serif;
+    text-decoration: none
+}
+.document
+{
+    color: blue;
+    font-size: 10px;
+    font-family: Verdana, Geneva, sans-serif;
+    text-decoration: none
+}
+.childCount
+{
+    color: blue;
+    font-size: 10px;
+    font-family: Verdana, Geneva, sans-serif;
+    text-decoration: none
+}
+
+/*
 body, th, td, input, select {
 	font-family: Verdana, Helvetica, Arial, sans-serif;
 }
@@ -441,3 +463,5 @@ table .selectOneRadio {
 	font-size: 12px;
 	color: #000000;
 }
+
+*/
