Patch for the new tree form Sean Schofield
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167638 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/web/css/basic.css
+++ b/webapps/examples/web/css/basic.css
@@ -371,6 +371,14 @@ div.titlebar {
     font-family: Verdana, Geneva, sans-serif;
     text-decoration: none
 }
+.documentSelected
+{
+    color: blue;
+    font-size: 10px;
+    font-family: Verdana, Geneva, sans-serif;
+    text-decoration: none;
+    font-weight: bold
+}
 .childCount
 {
     color: blue;
