MYFACES-1876 Use new Integer instead Integer.valueOf and related
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@660444 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/src/main/resources/META-INF/componentClass11.vm
+++ b/api/src/main/resources/META-INF/componentClass11.vm
@@ -172,7 +172,11 @@ $innersource
 #elseif ( $property.isStateHolder() )## || $utils.isConverter($type)
         values[$arrayIndex] = saveAttachedState(facesContext,$field);
 #elseif($utils.isPrimitiveClass($type))
+#if ($type == "boolean")
         values[$arrayIndex] = ${utils.getBoxedClass($type)}.valueOf($field);
+#else
+        values[$arrayIndex] = new ${utils.getBoxedClass($type)}($field);
+#end
 #else
         values[$arrayIndex] = $field;
 #end
