Add comment in generated file to make it easy to find original template class.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@668001 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/src/main/resources/META-INF/componentClass11.vm
+++ b/api/src/main/resources/META-INF/componentClass11.vm
@@ -25,6 +25,7 @@ import javax.faces.el.ValueBinding;
 import javax.faces.context.FacesContext;
 $utils.importTagClasses($component)
 
+// generated from class $component.classSource
 public class ${utils.getClassFromFullClass($component.className)} extends $component.superClassName
 #if ($component.implements)
     implements $component.implements
