Add velocity comments. Move "generated file" warning, so checkstyle header check passes.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@668002 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/src/main/resources/META-INF/componentClass11.vm
+++ b/api/src/main/resources/META-INF/componentClass11.vm
@@ -1,5 +1,18 @@
-// WARNING: This file was automatically generated. Do not edit it directly,
-//          or you will lose your changes.
+## Velocity template used to generate JSF1.1-compatible component classes
+## from component meta-data.
+##
+## Note that there are two types of component generation:
+##  * "subclass mode" (use annotated class as a parent class)
+##  * "template mode" (use annotated class as a template)
+## This template file is used for both.
+##
+## Variable $component refers to a ComponentMeta object to process
+## Variable $utils refers to an instance of MyfacesUtils.
+##
+## When "template mode" is being used then variable $innersource
+## holds a String containing all the non-abstract functions defined
+## in the annotated class.
+##
 /*
  *  Licensed to the Apache Software Foundation (ASF) under one
  *  or more contributor license agreements.  See the NOTICE file
@@ -26,6 +39,8 @@ import javax.faces.context.FacesContext;
 $utils.importTagClasses($component)
 
 // generated from class $component.classSource
+// WARNING: This file was automatically generated. Do not edit it directly,
+//          or you will lose your changes.
 public class ${utils.getClassFromFullClass($component.className)} extends $component.superClassName
 #if ($component.implements)
     implements $component.implements
