Handle new property names on ComponentMeta. Handle fact that template now needs to compute parent class rather than having the model builder decide.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@669257 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/src/main/resources/META-INF/componentClass11.vm
+++ b/api/src/main/resources/META-INF/componentClass11.vm
@@ -38,10 +38,16 @@ import javax.faces.el.ValueBinding;
 import javax.faces.context.FacesContext;
 $utils.importTagClasses($component)
 
-// generated from class $component.classSource
+#if ($component.isTemplate())
+#set ($generatedClassParent = $component.sourceClassParentClassName)
+#else
+#set ($generatedClassParent = $component.sourceClassName)
+#end
+// Generated from class ${component.sourceClassName}.
+//
 // WARNING: This file was automatically generated. Do not edit it directly,
 //          or you will lose your changes.
-public class ${utils.getClassFromFullClass($component.className)} extends $component.superClassName
+public class ${utils.getClassFromFullClass($component.className)} extends $generatedClassParent
 #if ($component.implements)
     implements $component.implements
 #end
@@ -56,9 +62,9 @@ public class ${utils.getClassFromFullClass($component.className)} extends $compo
         "$component.type";
 
 #if ($innersource)
-    //BEGIN CODE COPIED FROM $component.classSource 
+    //BEGIN CODE COPIED FROM $component.sourceClassName 
 $innersource
-    //END CODE COPIED FROM $component.classSource
+    //END CODE COPIED FROM $component.sourceClassName
 #end
 
     public ${utils.getClassFromFullClass($component.className)}()
