--- a/impl/src/main/resources/META-INF/myfaces_core.vm
+++ b/impl/src/main/resources/META-INF/myfaces_core.vm
@@ -18,7 +18,7 @@
  * under the License.
 -->
 <!DOCTYPE taglib PUBLIC "-//Sun Microsystems, Inc.//DTD JSP Tag Library 1.2//EN" "http://java.sun.com/dtd/web-jsptaglibrary_1_2.dtd">
-<taglib>
+<taglib xmlns="http://java.sun.com/JSP/TagLibraryDescriptor">
    <tlib-version>1.0</tlib-version>
    <jsp-version>1.2</jsp-version>
    <short-name>$shortname</short-name>
