MYFACES-1966 facet tag is in both myfaces_core.tld and myfaces_html.tld
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@694457 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/main/resources/META-INF/myfaces_core12.vm
+++ b/impl/src/main/resources/META-INF/myfaces_core12.vm
@@ -201,6 +201,7 @@ $baseContent
 #set ($tagList = $model.getTags())
 #foreach( $tag in $tagList )
 #if ($modelIds.contains($tag.modelId))
+#if ($utils.getTagPrefix($tag.name) == $shortname)
    <tag>
       <description><![CDATA[$tag.longDescription]]></description>
       <name>$utils.getTagName($tag.name)</name>
@@ -236,6 +237,7 @@ $baseContent
       </attribute>
 #end
    </tag>
+#end
 #end
 #end
 </taglib>
