--- a/impl/src/main/resources/META-INF/myfaces_html12.vm
+++ b/impl/src/main/resources/META-INF/myfaces_html12.vm
@@ -193,6 +193,7 @@ $baseContent
 #set ($tagList = $model.getTags())
 #foreach( $tag in $tagList )
 #if ($modelIds.contains($tag.modelId))
+#if ($utils.getTagPrefix($tag.name) == $shortname)
    <tag>
       <description><![CDATA[$tag.longDescription]]></description>
       <name>$utils.getTagName($tag.name)</name>
@@ -228,6 +229,7 @@ $baseContent
       </attribute>
 #end
    </tag>
+#end
 #end
 #end
 </taglib>
