--- a/impl/src/main/resources/META-INF/myfaces_html12.vm
+++ b/impl/src/main/resources/META-INF/myfaces_html12.vm
@@ -77,6 +77,7 @@ $baseContent
 #elseif ($property.isLiteralOnly())
          <rtexprvalue>false</rtexprvalue>
 #else
+#if ( "$!property.isRtexprvalue()" == "")
 #set ($type = $utils.getClassFromFullClass($property.className))
 #if ($type == "String")
          <deferred-value></deferred-value>
@@ -84,6 +85,9 @@ $baseContent
          <deferred-value>
              <type>$property.className</type>
          </deferred-value>
+#end
+#else
+         <rtexprvalue>$property.isRtexprvalue().booleanValue()</rtexprvalue>
 #end
 #end
       </attribute>
