MYFACES-2177 ConvertDateTimeTag timeZone does not work with ValueExpression of return type String
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@775382 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/main/resources/META-INF/myfaces_core12.vm
+++ b/impl/src/main/resources/META-INF/myfaces_core12.vm
@@ -140,6 +140,10 @@ $baseContent
          <deferred-value>
              <type>java.lang.Object</type>
          </deferred-value>
+#elseif ($property.className == "java.util.TimeZone" && $component.name == "f:convertDateTime") 
+         <deferred-value>
+             <type>java.lang.Object</type>
+         </deferred-value>
 #else
          <deferred-value>
              <type>$property.className</type>
